--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "/"
-title = "Ansible Training"
+title = "Ansible Schulung"
 
 enableGitInfo = true
 
@@ -47,7 +47,7 @@ weight = 1
 [[Languages.en.menu.main]]
 weight = 3
 name = "Puzzle ITC"
-url = "https://www.puzzle.ch"
+url = "https://www.puzzle-itc.de"
 
 [markup]
   [markup.goldmark]
@@ -80,7 +80,7 @@ sidebar_search_disable = false
 #  Set to false if you don't want to display a logo (/assets/icons/logo.svg) in the top nav bar
 navbar_logo = true
 # Set to true to disable the About link in the site footer
-footer_about_disable = true
+footer_about_enable = false
 
 ############################## social links ##############################
 [params.links]
@@ -88,11 +88,6 @@ footer_about_disable = true
 name = "GitHub"
 icon = "fab fa-github"
 url = "https://github.com/puzzle/ansible-training"
-
-[[params.links.user]]
-name = "Twitter"
-icon = "fab fa-twitter"
-url = "https://twitter.com/puzzleitc"
 
 [[params.links.user]]
 name = "LinkedIn"
@@ -108,7 +103,7 @@ url = "https://linkedin.com/company/puzzle-itc/"
     path = "github.com/puzzle/docsy-puzzle"
     disable = false
   [[module.imports]]
-    path = "github.com/acend/docsy-plus"
+    path = "github.com/kreativmonkey/docsy-plus"
     disable = false
   [[module.imports]]
     path = "github.com/google/docsy"
