--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
 # Default owners for everything in the repo
-* pschmid@puzzle.ch, grimm@puzzle.ch
+* @friendlypenguin @ombre8
 
 # Specific file/directory owners can be added below
 # For example:
